⚒  update components, interfaces and routes
